# modelscriptor

./: .gitignore  CLAUDE.md  DOOM.md  E8.8.1024.txt  Makefile  PLAN.md  README.md  ROADMAP.md  TODO.md  adder_update_plan.md  calculator_plan.md  compile_adder.py  compile_calculator.py  distance_optimization_plan.md  doom-research.md  graph_stats.py  interact.py  modal_dump_phase_e.py  modal_image.py  modal_run.py  modal_test.py  modal_walkthrough.py  observations.md  onnx_repl.py  optimization_guide.md  pyproject.toml  raycasting_approaches.md  reference_renderer.md  render_pipeline_ideas.md  requirements.txt  solver.md  unrolled_loop.md  zeros.md
.claude/: settings.json
.claude/commands/: commit.md  sync-from-main.md  sync.md
.github/workflows/: ci.yml
docs/: affine_bounds.md  cpsat_scheduler.md  design_byte_token_renderer.md  design_pure_autoregressive.md  doom_graph.md  doom_graph_post_phase_a.md  numerical_noise.md  numerical_noise_findings.md  op_noise_data.json  phase_a_part2_state_machine.md  phase_a_part5_validation.md  phase_b.md  phase_b_part1_thinking_split.md  phase_b_part4_validation.md  phase_c_part2_int_slot_embedding.md  phase_c_part3_quadratic_wall_index_attentions.md
docs/archive/: design_byte_token_renderer_phase_a.md  design_feedback_elimination.md  phase_a_part1_embedding.md  phase_a_part3_values.md  phase_a_part4_resolved.md  phase_a_plan.md  phase_b_part2_sorted_render.md  phase_b_part3_resolved_and_wall_gut.md  phase_c_part1_wall_geom_quadratic.md
docs/postmortems/: angle_210_overlay_reserve.md  phase_e_xfail.md
docs/sandbox/: overview.md  runtime_plan.md  translation_table.md
doom_sandbox/: CLAUDE.md  Makefile  __init__.py  pyproject.toml
doom_sandbox/api/: __init__.py  _runtime.py  debug.py  forward.py  past.py  pwl.py  std.py  test_concat_split.py  test_debug.py  test_past.py  test_pwl.py  test_run.py  test_std.py  test_tokens.py  test_vec.py  tokens.py  utils.py  vec.py
doom_sandbox/fixtures/: __init__.py  box_room.json  test_fixtures.py
doom_sandbox/phases/phase1_bsp_ranks/: PHASE.md  reference.py
doom_sandbox/runtime/: __init__.py  embedding.py  loop.py  noise.py  test_embedding.py
doom_sandbox/types/: __init__.py  frame.py  frame_input.py  game_state.py  map_subset.py
examples/: adder.py  adder_1digit.py  adder_v2.py  balanced_parens.py  binary_increment.py  caesar_cipher.py  calculator.py  calculator_v2.py  compile.py  fibonacci.py  range_printer.py  sort_digits_v1.py  sort_digits_v2.py  sort_digits_v4.py  token_balance.py
modelscriptor/compiler/: README.md  compile.py  device.py  export.py  feature_assignment.py  graph_utils.py  layer_plan.py  module.py  network_plan.py  notes.txt  repl.py  report.py  res_state.py  thoughts.py  todo.md  transformer.py  utils.py
modelscriptor/graph/: __init__.py  attn.py  embedding.py  ffn_layer.py  linear.py  misc.py  node.py  pos_encoding.py  relu.py  utils.py
modelscriptor/modelscript/: README.md  arithmetic_ops.py  const.py  embedding_arithmetic.py  ffn_layer.py  inout_nodes.py  input_nodes.py  linear_relu_linear.py  logic_ops.py  map_select.py  scalar_encoding.py  sequence_ops.py
scripts/: build_sandbox_fixtures.py  cpsat_schedule.py  diff_policy_annotations.py  diff_policy_layers.py  dump_measure_noise.py  dump_phase_e_allocator.py  inspect_standalone_linears.py  investigate_log_precision.py  investigate_phase_e.py  measure_op_noise.py  measure_render_graph_precision.py  probe_cond_gate_tex.py  probe_continuous_roundtrip.py  probe_debug_true.py  probe_layer_54.py  probe_m3_regression.py  probe_oracle_prefill_210.py  probe_per_layer_trajectory.py  probe_render_pos_trajectory.py  probe_sort_divergence.py  probe_step_92_debug.py  probe_texture_id_cols.py  probe_thinking_wall_geom.py  probe_wall_visibility_cond.py  sweep_compile_geometry.py
tests/: conftest.py
tests/_utils/: image_compare.py  test_image_compare.py
tests/compile/: test_attn_component_strategies.py  test_attn_sublayer_strategies.py  test_compile_ffn_network.py  test_compile_transformer.py  test_feature_assignment.py  test_ffn_sublayer_strategies.py  test_layer_plan.py
(+262 files in other folders)
