[project]
name = "modelscriptor"
version = "0.1.0"
description = "A compiler that transforms computation graphs into transformer neural network weights"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "ortools",
    "onnx",
    "onnxruntime",
]

[dependency-groups]
dev = [
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.uv]
index = [
    { name = "pytorch-cu124", url = "https://download.pytorch.org/whl/cu124", explicit = true },
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.pytest.ini_options]
# Coverage: run with `pytest --cov` to enable
cov_config = "pyproject.toml"

[tool.coverage.run]
source = ["modelscriptor"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
ignore_missing_imports = true
