[project]
name = "torchwright"
version = "0.1.0"
description = "A compiler that transforms computation graphs into transformer neural network weights"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "onnx",
    "pygame>=2.6.1",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu"]

[dependency-groups]
dev = [
    "black",
    "modal",
    "mypy",
    "pillow",
    "pytest",
    "pytest-cov",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]

[tool.coverage.run]
source = ["torchwright"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
ignore_missing_imports = true
