[project]
name = "torchwright"
version = "0.1.0"
description = "A compiler that transforms computation graphs into transformer neural network weights"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "onnx",
    "ortools>=9.10",
    "pydantic>=2.0",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu"]

[dependency-groups]
dev = [
    "black",
    "modal",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-xdist>=3.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[tool.pytest.ini_options]

[tool.coverage.run]
source = ["torchwright"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
ignore_missing_imports = true
